# Hackday-8

./: .clang-format  .gitignore  CMakeLists.txt  JaLe_WebBrowserComponent.h  Jale_WebBrowserComponent.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  index.html  main.cpp  package.json
cmake/: update_from_git.cmake
hackday-8-ui/: package-lock.json  package.json
hackday-8-ui/config/: webpack.config.js
hackday-8-ui/src/: App.js  JaLeHooks.js  ParticlesConfig.js  index.css
